tests/negative/typecheck/array-hetero.orng
fn main() -> Int
    let x = (1, '2', 3)
    x[0]